# packmin

./: .gitignore  README.md  pyproject.toml  requirements.txt
packmin/: __init__.py  ai.py  cli.py  config.py  models.py  prompts.py  weather.py
tests/: __init__.py  test_models.py
